src/objects/B2B_Akana_Oath__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_Body__c</fullName>
        <description>Used to get the access token from Akana for USMS integration</description>
        <label>Authorization Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_URL__c</fullName>
        <description>It will store the end point url to get the access token from Akana</description>
        <label>End URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Date__c</fullName>
        <label>Token Date</label>
        <type>DateTime</type>
    </fields>
    <label>Care Oath Authentication Akana</label>
</CustomObject>